@@ -1,4 +1,9 @@
 
+2019-09-12  Simon Sobisch <simonsobisch@gnu.org>
+
+	* scanner.l, parser.y: allow LENGTH *OF* to remove the ambiguity for
+	  REPOSITORY. FUNCTION LENGTH INTRINSIC. and register LENGTH OF
+
 2019-08-17  Simon Sobisch <simonsobisch@gnu.org>
 
 	* typeck.c (cb_encode_program_id), parser.y, codegen.c, cobc.c: changed
